--- a/.github/workflows/zap.yml
+++ b/.github/workflows/zap.yml
@@ -3,6 +3,9 @@ name: Simple OWASP ZAP Scan
 on:
   workflow_dispatch:
 
+permissions:
+  contents: read   # minimum required
+
 jobs:
   zap:
     runs-on: ubuntu-latest
@@ -14,3 +17,4 @@ jobs:
         uses: zaproxy/action-baseline@v0.10.0
         with:
           target: "http://testphp.vulnweb.com/login.php"
+          allow_issue_writing: false   # prevents permission error
