--- a/.github/workflows/zap.yml
+++ b/.github/workflows/zap.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: read   # minimum required
+  contents: read
 
 jobs:
   zap:
@@ -17,4 +17,11 @@ jobs:
         uses: zaproxy/action-baseline@v0.10.0
         with:
           target: "http://testphp.vulnweb.com/login.php"
-          allow_issue_writing: false   # prevents permission error
+          allow_issue_writing: false
+          cmd_options: "-a"
+
+      - name: Upload ZAP HTML Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: zap-scan          # <- no underscore
+          path: zap-report.html   # <- file created by zap
