--- a/.github/workflows/zap.yml
+++ b/.github/workflows/zap.yml
@@ -14,14 +14,18 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Run ZAP Baseline Scan
+        id: zap
         uses: zaproxy/action-baseline@v0.10.0
         with:
           target: "http://testphp.vulnweb.com/login.php"
           allow_issue_writing: false
           cmd_options: "-a"
 
-      - name: Upload ZAP HTML Report
+      - name: Upload ZAP reports folder
         uses: actions/upload-artifact@v4
         with:
-          name: zap-scan          # <- no underscore
-          path: zap-report.html   # <- file created by zap
+          name: zap-scan
+          path: |
+            *.html
+            *.xml
+            *.json
