--- a/.github/workflows/zap.yml
+++ b/.github/workflows/zap.yml
@@ -18,3 +18,4 @@ jobs:
         uses: zaproxy/action-baseline@v0.10.0
         with:
           target: "http://testphp.vulnweb.com/login.php"
+          fail_action: false           # keeps job green even if alerts found
