--- a/.github/workflows/zap.yml
+++ b/.github/workflows/zap.yml
@@ -1,7 +1,7 @@
 name: Simple OWASP ZAP Scan
 
-on:
-  workflow_dispatch:
+on: push
+#  workflow_dispatch:
 
 permissions:
   contents: read
@@ -18,4 +18,5 @@ jobs:
         uses: zaproxy/action-baseline@v0.10.0
         with:
           target: "http://testphp.vulnweb.com/login.php"
+          allow_issue_writing: false
           fail_action: false           # keeps job green even if alerts found
