--- a/.github/workflows/zap.yml
+++ b/.github/workflows/zap.yml
@@ -1,7 +1,7 @@
-name: Simple OWASP ZAP Scan
+name: Simple OWASP ZAP Scan (Logs Only)
 
-on: push
-#  workflow_dispatch:
+on:
+  workflow_dispatch:
 
 permissions:
   contents: read
@@ -14,9 +14,11 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Run ZAP Baseline Scan
+      - name: Run ZAP Baseline Scan (logs only)
         uses: zaproxy/action-baseline@v0.10.0
         with:
           target: "http://testphp.vulnweb.com/login.php"
-          allow_issue_writing: false
-          fail_action: false           # keeps job green even if alerts found
+          allow_issue_writing: false     # prevents GitHub issues
+          artifact_name: ""              # DISABLES artifact upload
+          cmd_options: ""                # prevents zap.yaml permission issue
+          fail_action: false             # scan will not fail the job
