--- a/.github/workflows/zap.yml
+++ b/.github/workflows/zap.yml
@@ -3,8 +3,8 @@ name: Simple OWASP ZAP Scan (Logs Only)
 on:
   workflow_dispatch:
 
-permissions:
-  contents: read
+# permissions:
+#   contents: read
 
 jobs:
   zap:
@@ -15,10 +15,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run ZAP Baseline Scan (logs only)
-        uses: zaproxy/action-baseline@v0.14.0
+        uses: zaproxy/action-baseline@v0.15.0
         with:
           target: "http://testphp.vulnweb.com/login.php"
-          allow_issue_writing: false     # prevents GitHub issues
-          artifact_name: ""              # DISABLES artifact upload
-          cmd_options: ""                # prevents zap.yaml permission issue
-          fail_action: false             # scan will not fail the job
+          # allow_issue_writing: false     # prevents GitHub issues
+          # artifact_name: ""              # DISABLES artifact upload
+          # cmd_options: ""                # prevents zap.yaml permission issue
+          # fail_action: false             # scan will not fail the job
