Update ZAP scan options in zap.yml
Uncomment options in ZAP Baseline Scan configuration.

--- a/.github/workflows/zap.yml
+++ b/.github/workflows/zap.yml
@@ -18,7 +18,7 @@ jobs:
         uses: zaproxy/action-baseline@v0.15.0
         with:
           target: "http://testphp.vulnweb.com/login.php"
-          # allow_issue_writing: false     # prevents GitHub issues
-          # artifact_name: ""              # DISABLES artifact upload
-          # cmd_options: ""                # prevents zap.yaml permission issue
+          allow_issue_writing: false     # prevents GitHub issues
+          #artifact_name: ""              # DISABLES artifact upload
+          cmd_options: ""                # prevents zap.yaml permission issue
           # fail_action: false             # scan will not fail the job
