Change trigger from workflow_dispatch to push

--- a/.github/workflows/zap.yml
+++ b/.github/workflows/zap.yml
@@ -1,7 +1,7 @@
 name: Simple OWASP ZAP Scan (Logs Only)
 
-on:
-  workflow_dispatch:
+on: push
+ # workflow_dispatch:
 
 permissions:
    contents: read
